--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .venv
 .env
+Test.py
+/user_data
+.vscode
+template\Template_CSV_LibraryInput.xlsx
+template\Template_CSV_LibraryInput.csv
+/output_files
